--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,10 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${libs.jcommon.classpath}:\
+    ${libs.jfreechart.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
